@@ -31,14 +31,14 @@ Int bid_required_bits_32 (uInt value)
   /* This algorithm can be optimized by using compiler builtins:
       x == 0 ? 0 : 32 - __builtin_clzl (x)  */
 
-  /* Lookup table, more info on how to construct it:
+  /* Lookup table to count leading zeros. More info on how to construct it:
      http://supertech.csail.mit.edu/papers/debruijn.pdf  */
-  static const int tab32[] =
+  static const Int tab32[] =
   {
-     0,  9,  1, 10, 13, 21,  2, 29,
-    11, 14, 16, 18, 22, 25,  3, 30,
-     8, 12, 20, 28, 15, 17, 24,  7,
-    19, 27, 23,  6, 26,  5,  4, 31
+    31, 22, 30, 21, 18, 10, 29,  2,
+    20, 17, 15, 13,  9,  6, 28,  1,
+    23, 19, 11,  3, 16, 14, 7,  24,
+    12,  4,  8, 25,  5, 26, 27,  0
   };
   uInt hash;
 
@@ -48,8 +48,8 @@ Int bid_required_bits_32 (uInt value)
   value |= value >> 8;
   value |= value >> 16;
 
-  hash = ((uInt)((value - (value >> 1))*0x077CB531U)) >> 27;
-  return tab32[hash] + 1;
+  hash = ((value * 0x07c4acddU) & 0xffffffffU) >> 27;
+  return 32 - tab32[hash];
 }
 
 /* -------------------------------------------------------------------- */
@@ -59,33 +59,14 @@ Int bid_required_bits_32 (uInt value)
 static inline
 Int bid_required_bits_64 (uLong value)
 {
-  /* This algorithm can be optimized by using compiler builtins:
-      x == 0 ? 0 : 64 - __builtin_clzll (x)  */
-
-  /* Lookup table, more info on how to construct it:
-     http://supertech.csail.mit.edu/papers/debruijn.pdf  */
-  static const int tab64[] =
-  {
-    63,  0, 58,  1, 59, 47, 53,  2,
-    60, 39, 48, 27, 54, 33, 42,  3,
-    61, 51, 37, 40, 49, 18, 28, 20,
-    55, 30, 34, 11, 43, 14, 22,  4,
-    62, 57, 46, 52, 38, 26, 32, 41,
-    50, 36, 17, 19, 29, 10, 13, 21,
-    56, 45, 25, 31, 35, 16,  9, 12,
-    44, 24, 15,  8, 23,  7,  6,  5
-  };
-  uLong hash;
-
-  value |= value >> 1;
-  value |= value >> 2;
-  value |= value >> 4;
-  value |= value >> 8;
-  value |= value >> 16;
-  value |= value >> 32;
-
-  hash = ((uLong)((value - (value >> 1))*0x07EDD5E59A4E28C2UL)) >> 58;
-  return tab64[hash] + 1;
+  Int ret;
+  uInt hi = (value >> 32);
+  if ((ret = bid_required_bits_32 (hi)) == 0)
+    {
+      uLong lo = (value & 0xFFFFFFFFU);
+      return bid_required_bits_32 (lo);
+    }
+  return ret + 32;
 }
 
 # ifdef DECUSE128
